--- a/app.json
+++ b/app.json
@@ -1,15 +1,15 @@
 {
-  "name": "Venocyber-md",
+  "name": "À𝖑è𝖝 𝕻ì𝖐ù-md",
   "description": "Simple WhatsApp Bot",
-  "logo": "https://telegra.ph/file/12b0fb245e6b8ba4bf718.jpg",
-  "keywords": ["Venocyber-md", "VENOCYBER", "VENOCYBER MD","VENOCYBER MD wabot","Venocyber","Venocybertech"],
+  "logo": "https://telegra.ph/file/d4ff21084eb154fdc06d6.jpg",
+  "keywords": ["À𝖑è𝖝 𝕻ì𝖐ù-md", "À𝖑è𝖝 𝕻ì𝖐ù", "À𝖑è𝖝 𝕻ì𝖐ù MD","À𝖑è𝖝 𝕻ì𝖐ù MD wabot","À𝖑è𝖝 𝕻ì𝖐À𝖑è𝖝 𝕻ì𝖐ùtech"],
   "success_url": "/",
   "stack": "container",
 
   "env": {
     "OWNER_NAME": {
       "description": "Name for Bot Owner",
-      "value": "VENOCYBER-𝐓𝐄𝐂𝐇",
+      "value": "À𝖑è𝖝 𝕻ì𝖐ù-𝐓𝐄𝐂𝐇",
       "required": true
     },
 
@@ -27,7 +27,7 @@
     "BOT_NAME": {
       "description": " NAME FOR BOT",
       "required": false,
-      "value": "VENOCYBER-𝐌𝐃"
+      "value": "À𝖑è𝖝 𝕻ì𝖐ù-𝐌𝐃"
     },
     "TZ": {
       "description": "Put TIME_ZONE according to your location",
@@ -102,12 +102,12 @@
     },
     "PACK_NAME": {
       "description": "Put Sticker Pack_Name.",
-      "value": "VENOCYBER",
+      "value": "À𝖑è𝖝 𝕻ì𝖐ù",
       "required": false
     },
     "PACK_AUTHER": {
       "description": "Put Sticker Author_Name.",
-      "value": "VENOCYBER BOTS 🧚",
+      "value": "À𝖑è𝖝 𝕻ì𝖐ù BOTS",
       "required": false
     }
   },
